@@ -30,13 +30,14 @@ function set_null_ok()
 	defs_file=$1
 	method=$2
 	param=$3
-	sed -i.bak "/^(define-method $method\$/,/^)/{/^  (parameters/{N;s/\\n.*\"$param\"/& (null-ok) (default \"NULL\")/}}" $defs_file
-	diff -u $defs_file.bak $defs_file || true
+	sed -i.bak "/^(define-\(method\|function\) $method\$/,/^)/{/^  (parameters/{N;s/\\n.*\"$param\"/& (null-ok) (default \"NULL\")/}}" $defs_file
+	diff -u $defs_file.bak $defs_file && echo "WARNING: $defs_file is unchanged" || true
 	rm $defs_file.bak
 }
 
 set_null_ok defs/hildon-window.defs set_main_menu menu
 set_null_ok defs/hildon-window.defs set_app_menu menu
+set_null_ok defs/hildon-wizard-dialog.defs hildon_wizard_dialog_new parent
 
 echo Generating hildon-types.c and hildon-types.h...
 glib-mkenums --template hildon-types-template.h $headers $extra_headers > hildon-types.h
