@@ -3,7 +3,10 @@ python-hildon (0.9.0-1maemo6) unstable; urgency=low
   * hildonmodule.c: replace hardcoded constants with defines from
     hildon-defines.h.
   * hildon.override: add override for hildon_color_button_get_color (restores
-    behavior added by GB#1195 fix.
+    behavior added by GB#1195 fix).
+  * debian/rules: Fix build cleanup.
+  * Allow None as parent argument for WizardDialog (restores GB#825 fix).
+  * Restore working examples and tests from previous version (0.8.9).
 
  -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Thu, 14 May 2009 13:49:15 -0400
 
